<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"

    tools:context=".LayarDua">

    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:layout_marginTop="25dp"
            android:text="@string/screen_2"
            android:textSize="40sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TextView>
        <EditText
            android:singleLine="true"
            android:id="@+id/screennama"
            android:layout_marginTop="250dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="10dp"
            android:background="@drawable/rectangleedittext"
            android:hint="@string/masukkan_nama"
            android:layout_width="match_parent"
            android:layout_height="40dp">

        </EditText>
        <Button

            android:enabled="false"
            android:id="@+id/gotoscreen3"
            android:layout_centerInParent="true"
            android:text="@string/go_to_screen_3"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/blue2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>

    </RelativeLayout>
</LinearLayout>